--- a/env/common.env
+++ b/env/common.env
@@ -1,11 +1,14 @@
-# Common to QT5 and QT6
+# Common to all builds
 CCACHE_DIR=/root/.ccache
-PUSH_TO_CDASH=true
+PUSH_TO_CDASH=false
 WITH_QUICK=ON
 WITH_3D=ON
 WITH_GRASS7=OFF
 ENABLE_UNITY_BUILDS=ON
+LANG=C.UTF-8
+LC_ALL=en_US.UTF-8
 
 # Unique to QGIS-Container-Build approach
 CMAKE_INSTALL_PREFIX=/qgis-install
 CMAKE_INSTALL_RPATH=/qgis-install/lib
+PYTHON_TEST_TIMEOUT_S=300
