--- a/env/common.env
+++ b/env/common.env
@@ -4,7 +4,11 @@ PUSH_TO_CDASH=false
 WITH_QUICK=ON
 WITH_3D=ON
 WITH_GRASS7=OFF
+WITH_GRASS8=OFF
+WITH_CLAZY=ON
+WITH_PDF4QT=OFF
 ENABLE_UNITY_BUILDS=ON
+WITH_COMPILE_COMMANDS=ON
 LANG=C.UTF-8
 LC_ALL=en_US.UTF-8
 
