--- a/env/qt-6.env
+++ b/env/qt-6.env
@@ -1,11 +1,14 @@
 # Unique to QT6 builds, based on CI matrix configuration
-WITH_QT5=OFF
-BUILD_WITH_QT6=ON
-WITH_CLAZY=OFF
-WITH_GRASS8=ON
-WITH_QTWEBENGINE=ON
-WITH_PDF4QT=ON
-WITH_COMPILE_COMMANDS=OFF
-LD_PRELOAD=''
+WITH_SFCGAL=ON
+WITH_MODEL_TEST=ON
+WITH_PG_TEST=ON
+WITH_MSSQL_TEST=ON
+WITH_HANA_TEST=ON
+WITH_ORACLE_TEST=ON
+WITH_QSPATIALITE=ON
+WITH_SERVER_LANDINGPAGE_WEBAPP=ON
+WITH_PDAL=OFF
+
+LD_PRELOAD=
 
 QT_VERSION=6
