incorporate QGIS spatialindex change

--- a/env/qt-6.env
+++ b/env/qt-6.env
@@ -8,6 +8,7 @@ WITH_ORACLE_TEST=ON
 WITH_QSPATIALITE=ON
 WITH_SERVER_LANDINGPAGE_WEBAPP=ON
 WITH_PDAL=OFF
+WITH_INTERNAL_SPATIALINDEX=ON
 
 LD_PRELOAD=
 
